--- a/design/db/arch.lpc.html
+++ b/design/db/arch.lpc.html
@@ -16,12 +16,12 @@
 <TH>Output only Bidir</TH>
 </TR>
 <TR >
-<TD >inst1</TD>
-<TD >3</TD>
+<TD >inst3|inst3</TD>
+<TD >17</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
-<TD >4</TD>
+<TD >8</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -32,12 +32,44 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >inst</TD>
-<TD >3</TD>
+<TD >inst3|inst</TD>
+<TD >17</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
-<TD >4</TD>
+<TD >8</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >inst3|inst4</TD>
+<TD >17</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >8</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >inst3</TD>
+<TD >34</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >8</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
