--- a/design/db/arch.lpc.html
+++ b/design/db/arch.lpc.html
@@ -16,7 +16,167 @@
 <TH>Output only Bidir</TH>
 </TR>
 <TR >
-<TD >inst2|inst|inst|inst</TD>
+<TD >select</TD>
+<TD >17</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >8</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >logic|inst3</TD>
+<TD >17</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >8</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >logic|inst</TD>
+<TD >17</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >8</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >logic|inst4</TD>
+<TD >17</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >8</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >logic</TD>
+<TD >34</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >8</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >shift|inst|inst3</TD>
+<TD >19</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >9</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >shift|inst|inst</TD>
+<TD >19</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >9</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >shift|inst|inst4</TD>
+<TD >19</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >9</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >shift|inst</TD>
+<TD >38</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >1</TD>
+<TD >9</TD>
+<TD >1</TD>
+<TD >1</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >shift</TD>
+<TD >11</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >9</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >add/sub|inst2|inst|inst|inst</TD>
 <TD >2</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -32,7 +192,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >inst2|inst|inst|inst1</TD>
+<TD >add/sub|inst2|inst|inst|inst1</TD>
 <TD >2</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -48,7 +208,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >inst2|inst|inst</TD>
+<TD >add/sub|inst2|inst|inst</TD>
 <TD >3</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -64,7 +224,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >inst2|inst|inst1|inst</TD>
+<TD >add/sub|inst2|inst|inst1|inst</TD>
 <TD >2</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -80,7 +240,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >inst2|inst|inst1|inst1</TD>
+<TD >add/sub|inst2|inst|inst1|inst1</TD>
 <TD >2</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -96,7 +256,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >inst2|inst|inst1</TD>
+<TD >add/sub|inst2|inst|inst1</TD>
 <TD >3</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -112,7 +272,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >inst2|inst|inst2|inst</TD>
+<TD >add/sub|inst2|inst|inst2|inst</TD>
 <TD >2</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -128,7 +288,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >inst2|inst|inst2|inst1</TD>
+<TD >add/sub|inst2|inst|inst2|inst1</TD>
 <TD >2</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -144,7 +304,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >inst2|inst|inst2</TD>
+<TD >add/sub|inst2|inst|inst2</TD>
 <TD >3</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -160,7 +320,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >inst2|inst|inst3|inst</TD>
+<TD >add/sub|inst2|inst|inst3|inst</TD>
 <TD >2</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -176,7 +336,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >inst2|inst|inst3|inst1</TD>
+<TD >add/sub|inst2|inst|inst3|inst1</TD>
 <TD >2</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -192,7 +352,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >inst2|inst|inst3</TD>
+<TD >add/sub|inst2|inst|inst3</TD>
 <TD >3</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -208,7 +368,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >inst2|inst</TD>
+<TD >add/sub|inst2|inst</TD>
 <TD >9</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -224,7 +384,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >inst2|inst1|inst|inst</TD>
+<TD >add/sub|inst2|inst1|inst|inst</TD>
 <TD >2</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -240,7 +400,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >inst2|inst1|inst|inst1</TD>
+<TD >add/sub|inst2|inst1|inst|inst1</TD>
 <TD >2</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -256,7 +416,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >inst2|inst1|inst</TD>
+<TD >add/sub|inst2|inst1|inst</TD>
 <TD >3</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -272,7 +432,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >inst2|inst1|inst1|inst</TD>
+<TD >add/sub|inst2|inst1|inst1|inst</TD>
 <TD >2</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -288,7 +448,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >inst2|inst1|inst1|inst1</TD>
+<TD >add/sub|inst2|inst1|inst1|inst1</TD>
 <TD >2</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -304,7 +464,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >inst2|inst1|inst1</TD>
+<TD >add/sub|inst2|inst1|inst1</TD>
 <TD >3</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -320,7 +480,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >inst2|inst1|inst2|inst</TD>
+<TD >add/sub|inst2|inst1|inst2|inst</TD>
 <TD >2</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -336,7 +496,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >inst2|inst1|inst2|inst1</TD>
+<TD >add/sub|inst2|inst1|inst2|inst1</TD>
 <TD >2</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -352,7 +512,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >inst2|inst1|inst2</TD>
+<TD >add/sub|inst2|inst1|inst2</TD>
 <TD >3</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -368,7 +528,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >inst2|inst1|inst3|inst</TD>
+<TD >add/sub|inst2|inst1|inst3|inst</TD>
 <TD >2</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -384,7 +544,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >inst2|inst1|inst3|inst1</TD>
+<TD >add/sub|inst2|inst1|inst3|inst1</TD>
 <TD >2</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -400,7 +560,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >inst2|inst1|inst3</TD>
+<TD >add/sub|inst2|inst1|inst3</TD>
 <TD >3</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -416,7 +576,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >inst2|inst1</TD>
+<TD >add/sub|inst2|inst1</TD>
 <TD >9</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -432,7 +592,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >inst2</TD>
+<TD >add/sub|inst2</TD>
 <TD >17</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -441,6 +601,86 @@
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >add/sub</TD>
+<TD >18</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >9</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >inst|inst3</TD>
+<TD >19</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >9</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >inst|inst</TD>
+<TD >19</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >9</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >inst|inst4</TD>
+<TD >19</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >9</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >inst</TD>
+<TD >38</TD>
+<TD >2</TD>
+<TD >0</TD>
+<TD >2</TD>
+<TD >9</TD>
+<TD >2</TD>
+<TD >2</TD>
+<TD >2</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
